welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:39: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (getCouleurSol==Color.GREEN){
  ^DwarfCode:42: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return false
  ^